# Switch

./: .appveyor.yml  .codecov.yml  .codedocs  .cppcheck  .cppcheck_false_positive  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  install.cmd  install.sh
examples/: CMakeLists.txt  README.md
examples/DesignPatterns/: README.md
examples/DesignPatterns/AbstractFactory/: AbstractFactory.cpp  README.md
examples/DesignPatterns/Adapter/: Adapter.cpp  README.md
examples/DesignPatterns/Bridge/: Bridge.cpp  README.md
examples/DesignPatterns/Builder/: Builder.cpp  README.md
examples/DesignPatterns/ChainOfResponsability/: ChainOfResponsability.cpp  README.md
examples/DesignPatterns/Command/: Command.cpp  README.md
examples/DesignPatterns/Composite/: Composite.cpp  README.md
examples/DesignPatterns/Decorator/: Decorator.cpp  README.md
examples/DesignPatterns/Facade/: README.md
examples/DesignPatterns/FactoryMethod/: FactoryMethod.cpp  README.md
examples/DesignPatterns/Flyweight/: Flyweight.cpp  README.md
examples/DesignPatterns/Interpreter/: README.md
examples/DesignPatterns/Iterator/: Iterator.cpp  README.md
examples/DesignPatterns/Mediator/: README.md
examples/DesignPatterns/Memento/: README.md
examples/DesignPatterns/Observer/: Observer.cpp  README.md
examples/DesignPatterns/Prototype/: Prototype.cpp  README.md
examples/DesignPatterns/Proxy/: README.md
examples/DesignPatterns/Singleton/: README.md
examples/DesignPatterns/State/: README.md  State.cpp
examples/DesignPatterns/Strategy/: README.md  Strategy.cpp
examples/DesignPatterns/TemplateMethod/: README.md  TemplateMethod.cpp
examples/DesignPatterns/Visitor/: README.md  Visitor.cpp
examples/Switch.System/: README.md
examples/Switch.System.Drawing/: README.md
examples/Switch.System.Drawing/Font/: CMakeLists.txt  Font.cpp
examples/Switch.System.Drawing/FontFamily/: CMakeLists.txt  FontFamily.cpp
examples/Switch.System.Drawing/Point/: Point.cpp
examples/Switch.System.Drawing/PointF/: PointF.cpp
examples/Switch.System.Drawing/Size/: Size.cpp
examples/Switch.System.Drawing/SystemFonts/: CMakeLists.txt  SystemFonts.cpp
examples/Switch.System.Windows.Forms/: README.md
examples/Switch.System.Windows.Forms/Application/: Application.cpp  CMakeLists.txt  README.md
examples/Switch.System.Windows.Forms/ApplicationAndMain/: ApplicationAndMain.cpp  CMakeLists.txt  README.md
examples/Switch.System.Windows.Forms/ApplicationEnableVisualStyle/: ApplicationEnableVisualStyle.cpp  CMakeLists.txt  README.md
examples/Switch.System.Windows.Forms/ApplicationEnableVisualSyle/: CMakeLists.txt
examples/Switch.System.Windows.Forms/ApplicationIcon/: ApplicationIcon.cpp  CMakeLists.txt  Enterprise.icns
examples/Switch.System.Windows.Forms/ApplicationIdle/: ApplicationIdle.cpp  CMakeLists.txt  README.md
examples/Switch.System.Windows.Forms/Button/: Button.cpp  CMakeLists.txt  README.md
examples/Switch.System.Windows.Forms/CheckBox/: CMakeLists.txt  CheckBox.cpp  README.md
examples/Switch.System.Windows.Forms/Chrono/: CMakeLists.txt  Chrono.cpp  README.md
examples/Switch.System.Windows.Forms/ColorDialog/: CMakeLists.txt  ColorDialog.cpp  README.md
examples/Switch.System.Windows.Forms/ColoredForms/: CMakeLists.txt  ColoredForms.cpp  README.md
examples/Switch.System.Windows.Forms/ColoredTabPages/: CMakeLists.txt  ColoredTabPages.cpp  README.md
examples/Switch.System.Windows.Forms/DataFormatsGetFormat/: CMakeLists.txt  DataFormatsGetFormat.cpp  README.md
examples/Switch.System.Windows.Forms/EnableChangedEvent/: CMakeLists.txt  EnableChangedEvent.cpp  README.md
examples/Switch.System.Windows.Forms/FolderBrowserDialog/: CMakeLists.txt  FolderBrowserDialog.cpp  README.md
examples/Switch.System.Windows.Forms/FontChangedEvent/: CMakeLists.txt  FontChangedEvent.cpp  README.md
examples/Switch.System.Windows.Forms/FontDialog/: CMakeLists.txt  FontDialog.cpp  README.md
examples/Switch.System.Windows.Forms/Form/: CMakeLists.txt  Form.cpp  README.md
examples/Switch.System.Windows.Forms/FormClick/: CMakeLists.txt  FormClick.cpp  README.md
examples/Switch.System.Windows.Forms/FormWithAssemblyInfo/: CMakeLists.txt  Form.cpp  README.md
examples/Switch.System.Windows.Forms/GroupBox/: CMakeLists.txt  GroupBox.cpp  README.md
examples/Switch.System.Windows.Forms/GroupBoxAndCheckBox/: CMakeLists.txt  GroupBoxAndCheckBox.cpp  README.md
examples/Switch.System.Windows.Forms/GroupBoxAndRadioButton/: CMakeLists.txt  GroupBoxAndRadioButton.cpp  README.md
examples/Switch.System.Windows.Forms/HelloWorldForm/: CMakeLists.txt  HelloWorldForm.cpp  README.md
examples/Switch.System.Windows.Forms/HelloWorldForm2/: CMakeLists.txt  HelloWorldForm2.cpp
examples/Switch.System.Windows.Forms/HelloWorldMessageBox/: CMakeLists.txt  HelloWorldMessageBox.cpp  README.md
examples/Switch.System.Windows.Forms/Label/: CMakeLists.txt  Label.cpp  README.md
examples/Switch.System.Windows.Forms/Lines/: CMakeLists.txt  Lines.cpp  README.md
examples/Switch.System.Windows.Forms/LocationChangedEvent/: CMakeLists.txt  LocationChangedEvent.cpp  README.md
examples/Switch.System.Windows.Forms/MessageBox/: CMakeLists.txt  MessageBox.cpp  README.md
examples/Switch.System.Windows.Forms/MessageBox1/: CMakeLists.txt  MessageBox1.cpp  README.md
examples/Switch.System.Windows.Forms/MessageBox2/: CMakeLists.txt  MessageBox2.cpp  README.md
examples/Switch.System.Windows.Forms/MessageBox3/: CMakeLists.txt  README.md
examples/Switch.System.Windows.Forms/MouseEvent/: CMakeLists.txt  MouseEvent.cpp  README.md
examples/Switch.System.Windows.Forms/OpenFileDialog/: CMakeLists.txt  OpenFileDialog.cpp  README.md
examples/Switch.System.Windows.Forms/Panel/: CMakeLists.txt  Panel.cpp  README.md
examples/Switch.System.Windows.Forms/ProgressBar/: CMakeLists.txt  ProgressBar.cpp  README.md
examples/Switch.System.Windows.Forms/RadioButton/: README.md  (+2 more)
examples/Switch.TUnit/: README.md
examples/Switch.TUnit.Framework/: README.md
tests/Switch.System.Windows.Forms.ManualTests/: CMakeLists.txt  Main.cpp
(+1143 files in other folders)
