project(Switch.System.Windows.Forms.ManualTests)
SetSwitchApplicationCopyright("Copyright 2018 by Gammasoft")
SetSwitchApplicationIdentifier("org.gammasoft.${PROJECT_NAME}")
SetSwitchApplicationInformation("Write with Switch")
add_executable(${PROJECT_NAME} ${SWITCH_GUI} Main.cpp)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER tests)
target_link_libraries(${PROJECT_NAME} Switch.System.Windows.Forms)
