cmake_minimum_required(VERSION 3.2)

project(LocationChangedEvent)
find_package(Switch REQUIRED)
SetSwitchApplicationCopyright("© 2010 - 2018 by Gammasoft")
SetSwitchApplicationIdentifier("org.gammasoft.LocationChangeEvent")
SetSwitchApplicationInformation("This example shows how to use Switch")
add_custom_target(LocationChangedEvent SOURCES LocationChangedEvent.cpp)
#add_executable(LocationChangedEvent ${SWITCH_GUI} LocationChangedEvent.cpp)
#target_link_libraries(LocationChangedEvent Switch.System.Windows.Forms)
